--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -10,13 +10,13 @@ address, caption, cite, code, dfn, th, var { font-style:normal; font-weight:norm
 
 ul, ol ,li{ list-style:none; }
 
-body { color:#333; font:12px "SimSun","宋体","Arial Narrow",HELVETICA; background:#fff;}
+body { color:#333; font:12px PingFangSC-Regular; background:#fff;}
 
 a { color:#666; text-decoration:none; }
 /*清除浮动*/
 .clear{clear:both}
 *{box-sizing:border-box}
-body,html{
+body,html,#root{
     height: 100%;
     overflow: hidden;
 }
